--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "styled-icons": "^10.47.0",
     "typeface-poppins": "^1.1.13"
