--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-input-mask": "^2.0.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.7.5",
     "styled-icons": "^10.47.0",
     "typeface-poppins": "^1.1.13"
   },
